Ch06 was finished.