@@ -9,6 +9,14 @@ libraryDependencies ++= Seq(
   "org.apache.spark" %% "spark-core" % "2.1.0" % "provided",
   "org.apache.spark" %% "spark-sql" % "2.1.0",
   "org.apache.spark" %% "spark-mllib" % "2.1.0",
+
+  "edu.stanford.nlp" % "stanford-corenlp" % "3.7.0",
+  "edu.stanford.nlp" % "stanford-corenlp" % "3.7.0" classifier "models",
+  "org.apache.hadoop" % "hadoop-client" % "2.8.0",
+  "edu.umd" % "cloud9" % "2.0.1",
+  // "com.google.guava" % "guava" % "14.0.1",
+  "info.bliki.wiki" % "bliki-core" % "3.1.0",
+
   "org.scalactic" %% "scalactic" % "3.0.1",
   "org.scalatest" %% "scalatest" % "3.0.1" % "test",
   "com.holdenkarau" %% "spark-testing-base" % "2.1.0_0.6.0" % "test",
@@ -21,10 +29,13 @@ libraryDependencies ++= Seq(
 
 // jarName in assembly := "aaspark.jar"
 
+resolvers ++= Seq(
+  "Cloudera Repository" at "https://repository.cloudera.com/artifactory/cloudera-repos/"
+)
+
 parallelExecution in Test := false
 
-javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M",
-                    "-XX:+CMSClassUnloadingEnabled")
+javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:+CMSClassUnloadingEnabled")
 
 assemblyOption in assembly :=
   (assemblyOption in assembly).value.copy(includeScala = false)
